# PFD_assignement

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: Requirements.md
software/: CMakeLists.txt
software/primary_flight_display/: CMakeLists.txt  primary_flight_display.cpp
software/primary_flight_display/include/primary_flight_display/: primary_flight_display.h
software/software_in_the_loop/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  sil_command_panel.cpp  sil_command_panel.h
